[package]
name = "vect"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", version = "0.19.0-dev", features = [
  "dynamic_linking",
  "ghost_nodes",
  "file_watcher",
  "debug",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
